[package]
name = "facebook_video_downloader"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
rfd = "0.8"
native-tls = "0.2"

[profile.release]
opt-level = 3